--- a/gb/20/10/2/n12448220.md
+++ b/gb/20/10/2/n12448220.md
@@ -1,63 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wgpdek3931/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wgpdek3931/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wgpdek3931/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wgpdek3931/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wgpdek3931/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wgpdek3931/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wgpdek3931/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wgpdek3931/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>台湾黑熊遭山猪 吁农民改采电围网</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>台湾黑熊遭山猪吊 吁农民改采电围网</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/a071ef2ae69105e2808f9ab66941f3f9-600x400.jpg" />
 <h6>市府农业局表示，政府有补助设置“电围网”，欢迎向农会或公所提出申请。（台中市政府提供）
 </h6>
 <hr>
-<p>【大纪元2020年10月02日讯】（大纪元记者黄玉燕台湾台中报导）台中市和平区日前发现一只<ahref="https://github.com/wgpdek3931/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E9%BB%91%E7%86%8A.md#1">台湾黑熊</a>受困在东卯山果园陷阱中，林务局东势林区管理处获报，请特有生物保育中心兽医师团队救援，目前黑熊身体状况稳定。市府农业局表示，农民防治野生动物破坏农作物，勿用<ahref="https://github.com/wgpdek3931/djy/blob/master/gb/tag/%E5%85%BD%E9%93%97.md#1">兽铗</a>或“山猪吊”，可其他方式进行，如政府有补助设置“<ahref="https://github.com/wgpdek3931/djy/blob/master/gb/tag/%E7%94%B5%E5%9B%B4%E7%BD%91.md#1">电围网</a>”，欢迎向农会或公所提出申请。</p>
-<p>市府农业局表示，该只<ahref="https://github.com/wgpdek3931/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E9%BB%91%E7%86%8A.md#1">台湾黑熊</a>经特生中心专业兽医师评估后，身体状况尚可，左前脚及嘴巴因陷阱“山猪吊”受到皮肉伤，经现场清创后身体状况稳定，已送往特生低海拔中心观察。</p>
-<p>农业局呼吁农民可以<ahref="https://github.com/wgpdek3931/djy/blob/master/gb/tag/%E7%94%B5%E5%9B%B4%E7%BD%91.md#1">电围网</a>等较友善的方式，防治野生动物破坏农作物、且效果较佳。目前合法耕地均可申请电围网施设补助，每案补助经费最高4.5万元，并按中央、地方政府及农民各分担1/2、1/4及1/4比例进行补助。农业局指出，野生动物破坏农作物事件日趋频繁，往往造成农民损失惨重，依《野生动物保育法》第21条规定，野生动物危害农民合法种植的农林作物、家禽、家畜或水产养殖，得予以猎捕。</p>
-<p>不过地点若在野外栖地，则不得使用<ahref="https://github.com/wgpdek3931/djy/blob/master/gb/tag/%E5%85%BD%E9%93%97.md#1">兽铗</a>或山猪吊等猎捕野生动物，如猎捕一般类野生动物，依《野生动物保育法》第49条第1项第2款规定，处6万元以上、30万元以下罚锾；如猎捕保育类野生动物，依《野生动物保育法》第41条规定，处6月以上、5年以下有期徒刑，得并科20万元以上、100万元以下罚金。</p>
+<p>【大纪元2020年10月02日讯】（大纪元记者黄玉燕台湾台中报导）台中市和平区日前发现一只<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E9%BB%91%E7%86%8A.md#1">台湾黑熊</a>受困在东卯山果园陷阱中，林务局东势林区管理处获报，请特有生物保育中心兽医师团队救援，目前黑熊身体状况稳定。市府农业局表示，农民防治野生动物破坏农作物，勿用<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%BD%E9%93%97.md#1">兽铗</a>或“山猪吊”，可其他方式进行，如政府有补助设置“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B5%E5%9B%B4%E7%BD%91.md#1">电围网</a>”，欢迎向农会或公所提出申请。</p>
+<p>市府农业局表示，该只<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E9%BB%91%E7%86%8A.md#1">台湾黑熊</a>经特生中心专业兽医师评估后，身体状况尚可，左前脚及嘴巴因陷阱“山猪吊”受到皮肉伤，经现场清创后身体状况稳定，已送往特生低海拔中心观察。</p>
+<p>农业局呼吁农民可以<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%B5%E5%9B%B4%E7%BD%91.md#1">电围网</a>等较友善的方式，防治野生动物破坏农作物、且效果较佳。目前合法耕地均可申请电围网施设补助，每案补助经费最高4.5万元，并按中央、地方政府及农民各分担1/2、1/4及1/4比例进行补助。农业局指出，野生动物破坏农作物事件日趋频繁，往往造成农民损失惨重，依《野生动物保育法》第21条规定，野生动物危害农民合法种植的农林作物、家禽、家畜或水产养殖，得予以猎捕。</p>
+<p>不过地点若在野外栖地，则不得使用<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%BD%E9%93%97.md#1">兽铗</a>或山猪吊等猎捕野生动物，如猎捕一般类野生动物，依《野生动物保育法》第49条第1项第2款规定，处6万元以上、30万元以下罚锾；如猎捕保育类野生动物，依《野生动物保育法》第41条规定，处6月以上、5年以下有期徒刑，得并科20万元以上、100万元以下罚金。</p>
 <p>责任编辑：李薇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/8/14/n12330510.md#1">2020全国登山研讨会 8月20日报名截止</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/24/n12426291.md#1">力阻灭绝 全球最大植物保种中心在台湾</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/25/n12429016.md#1">Taiwan Can Help 曼哈顿时代广场展示台湾防疫贡献</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12441731.md#1">美驻联大使：没有台湾充分参与的联合国是欺骗世界</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12442182.md#1">美联合国大使：川普是台湾值得信赖的朋友</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12447657.md#1">台湾黑熊困陷阱 农业局吁勿用兽铗</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12448184.md#1">东海商圈驳关闭潮 邀中秋月光市集同乐</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12447991.md#1">耕耘梨山实验果园 阿宝还土地予山林</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12441983.md#1">疫后喜迎简单新世界——7个面对新常态的好习惯</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12441642.md#1">网罗必比登美食 大坑千人宴开放订桌　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/14/n12330510.md#1">2020全国登山研讨会 8月20日报名截止</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/24/n12426291.md#1">力阻灭绝 全球最大植物保种中心在台湾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/25/n12429016.md#1">Taiwan Can Help 曼哈顿时代广场展示台湾防疫贡献</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/30/n12441731.md#1">美驻联大使：没有台湾充分参与的联合国是欺骗世界</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/30/n12442182.md#1">美联合国大使：川普是台湾值得信赖的朋友</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/2/n12447657.md#1">台湾黑熊困陷阱 农业局吁勿用兽铗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680380.md#1">科博馆鸟瞰剧场走入历史 告别演出4月登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679906.md#1">雾峰农会结合户政所 推出新生儿纪念酒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678509.md#1">中部美展首奖揭晓  19岁萧辅一版画作品《缄》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678502.md#1">美国五大州农产展示会  60家厂商参展</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/11/7/n3077476.md#1" target="_blank">【史实】卡尔·马克思的成魔之路</a></li><li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/2/n10610921.md#1" target="_blank">8岁自闭儿奇迹“开心锁” 变身最快乐男孩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/7/30/n12294991.md#1">【成吉思汗】降生草原 绝境中成长</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/26/n12433270.md#1">张爱玲的上海</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/2/1/5/n161846.md#1">梦溪笔谈中的神秘现象（上）</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/22/n12423035.md#1">唐朝皇子救罪龙 龙神涌泉报恩</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12446340.md#1">【十字路口】五路加速 习将成中共亡党领导人</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12446937.md#1">【纽约调查】华人进步会被爆 资助黑命贵运动</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/26/n12433127.md#1">【罗厨寻味】南瓜红烧肉</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444550.md#1">美众院中国工作组新报告 指中共为世代之敌</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12443917.md#1">【拍案惊奇】拜登辩论作弊？蓬佩奥会访台吗</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444668.md#1">腾讯给一万员工送华为手机 网民炸锅</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12445814.md#1">摆脱小章子怡标签 童瑶出道18年一夜爆红</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12442828.md#1">章子怡首晒儿子正面照 一家五口温馨出镜</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/29/n12440388.md#1">吴秀波抛售美国豪宅 亏本甩卖仍无人问津</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12443068.md#1">教女儿弹琴上演四手联弹 周杰伦打趣称学费贵</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12447747.md#1">澎恰恰破产苦还1.2亿债 突发文“快撑不住”</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444598.md#1">外星人来访？疫情下美国UFO目击事件增一半</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/10/1/n12444217.md#1">介绍台湾“共匪饼” 香港亲共媒体被称造反</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/29/n12439558.md#1">中秋吃月饼烤肉 必备4种饮料 排毒又降血脂</a></li>
-<li><a href="https://github.com/wgpdek3931/djy/blob/master/gb/20/9/30/n12443080.md#1">【本周直播】乳房有硬块是癌症？名医教你抗乳癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wgpdek3931/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wgpdek3931/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/2/n12448220.htm">台湾黑熊遭山猪 吁农民改采电围网</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/2/n12448220.htm">台湾黑熊遭山猪吊 吁农民改采电围网</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wgpdek3931/djy/blob/master/gb/20/10/2/n12448220.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wgpdek3931/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wgpdek3931/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wgpdek3931/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wgpdek3931/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgpdek3931/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/10/2/n12448220.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
